# GEngine

./: CMakeLists.txt
include/: GEngine.h  abstract.h  camera.h  display.h  geometry.h  light.h  material.h  matrix.h  world.h
src/: CMakeLists.txt  camera.cpp  display-glut.cpp  display.cpp  display.h  display2D.cpp  display3D.cpp  geometry.cpp  geometry2D.cpp  geometry3D.cpp  light.cpp  material.cpp  matrix.cpp  vector.cpp  world.cpp
